Remove multiple migration files for various schema changes including dropping columns, tables, and altering existing structures across several tables such as "OpenaiSetting", "Dify", "Chat", "IntegrationSession", and others. This includes the removal of unique constraints, addition of new columns, and the deletion of unused migration files to streamline the database schema.

--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "lint:check": "eslint --ext .ts src",
     "db:generate": "npx prisma generate --schema ./prisma/postgresql-schema.prisma",
     "db:deploy": "rm -rf ./prisma/migrations && cp -r ./prisma/postgresql-migrations ./prisma/migrations && npx prisma migrate deploy --schema ./prisma/postgresql-schema.prisma",
-    "db:deploy:win": "xcopy /E /I prisma\\postgresql-migrations prisma\\migrations && npx prisma migrate deploy --schema prisma\\postgresql-schema.prisma",
     "db:studio": "npx prisma studio --schema ./prisma/postgresql-schema.prisma",
-    "db:migrate:dev": "rm -rf ./prisma/migrations && cp -r ./prisma/postgresql-migrations ./prisma/migrations && npx prisma migrate dev --schema ./prisma/postgresql-schema.prisma && cp -r ./prisma/migrations/* ./prisma/postgresql-migrations",
-    "db:migrate:dev:win": "xcopy /E /I prisma\\postgresql-migrations prisma\\migrations && npx prisma migrate dev --schema prisma\\postgresql-schema.prisma"
+    "db:migrate:dev": "rm -rf ./prisma/migrations && cp -r ./prisma/postgresql-migrations ./prisma/migrations && npx prisma migrate dev --schema ./prisma/postgresql-schema.prisma && cp -r ./prisma/migrations/* ./prisma/postgresql-migrations"
   },
   "repository": {
     "type": "git",
