--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
     "test": "tsx watch ./test/all.test.ts",
     "lint": "eslint --fix --ext .ts src",
     "lint:check": "eslint --ext .ts src",
-    "db:generate": "npx prisma generate --schema ./prisma/postgresql-schema.prisma",
-    "db:deploy": "rm -rf ./prisma/migrations && cp -r ./prisma/postgresql-migrations ./prisma/migrations && npx prisma migrate deploy --schema ./prisma/postgresql-schema.prisma",
-    "db:deploy:win": "xcopy /E /I prisma\\postgresql-migrations prisma\\migrations && npx prisma migrate deploy --schema prisma\\postgresql-schema.prisma",
-    "db:studio": "npx prisma studio --schema ./prisma/postgresql-schema.prisma",
-    "db:migrate:dev": "rm -rf ./prisma/migrations && cp -r ./prisma/postgresql-migrations ./prisma/migrations && npx prisma migrate dev --schema ./prisma/postgresql-schema.prisma && cp -r ./prisma/migrations/* ./prisma/postgresql-migrations",
-    "db:migrate:dev:win": "xcopy /E /I prisma\\postgresql-migrations prisma\\migrations && npx prisma migrate dev --schema prisma\\postgresql-schema.prisma"
+    "db:generate": "npx prisma generate --schema ./prisma/schema.prisma",
+    "db:deploy": "rm -rf ./prisma/migrations && cp -r ./prisma/migrations ./prisma/migrations && npx prisma migrate deploy --schema ./prisma/schema.prisma",
+    "db:studio": "npx prisma studio --schema ./prisma/schema.prisma",
+    "db:migrate:dev": "rm -rf ./prisma/migrations && cp -r ./prisma/migrations ./prisma/migrations && npx prisma migrate dev --schema ./prisma/schema.prisma && cp -r ./prisma/migrations/* ./prisma/migrations"
   },
   "repository": {
     "type": "git",
